--- a/LaTex/tfg.tex
+++ b/LaTex/tfg.tex
@@ -46,6 +46,10 @@
 \usepackage{nicematrix}
 \usepackage{graphicx}
 \usepackage{eurosym}
+\usepackage{pifont}
+
+\newcommand{\cmark}{\ding{51}} 
+\newcommand{\xmark}{\ding{55}} 
 
 \begin{document}
 
@@ -101,7 +105,6 @@
 \input{apendices/apendice01}
 \input{apendices/apendice02}
 \input{apendices/apendice03}
-\input{apendices/apendice04}
 % Añadir tantos apéndices como sea necesario 
 
 % -------------------------------------------------------------------
